# demand-forecast

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  config.example.yaml  datasets.py  debug_notebook.py  debug_quick.py  docker-compose.yml  fake_data_generator.ipynb  mkdocs.yml  models.py  pyproject.toml  sales_v2.ipynb  tuning.ipynb  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
demand_forecast/: __init__.py  __main__.py  cli.py
demand_forecast/config/: __init__.py  settings.py
demand_forecast/core/: __init__.py  evaluator.py  exceptions.py  pipeline.py  trainer.py  tuning.py
demand_forecast/data/: __init__.py  dataloader.py  dataset.py  feature_engineering.py  loader.py  preprocessor.py
demand_forecast/inference/: __init__.py  confidence.py  predictor.py
demand_forecast/models/: __init__.py  components.py  lightweight.py  losses.py  transformer.py  transformer_v2.py  wrapper.py
demand_forecast/synthetic/: __init__.py  generator.py
demand_forecast/utils/: __init__.py  checkpoint.py  clustering.py  memory.py  metrics.py  outliers.py  time_features.py  timeseries.py  visualization.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DEVELOPMENT.md  QUICKSTART.md  index.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_cli.py  test_config.py
tests/test_core/: test_evaluator.py  test_pipeline.py
tests/test_models/: __init__.py  test_model_forward.py  test_training_flow.py  test_tuning.py
tests/test_utils/: test_outliers.py  test_time_features.py  test_visualization.py
